--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			border: none;
 		}
 		.mc {
-		    /*transform: scale(2);*/
+		    transform: scale(2);
 		    image-rendering: optimizeSpeed;
 		    image-rendering: -moz-crisp-edges;
 		    image-rendering: -o-crisp-edges;
@@ -19,7 +19,7 @@
 		    image-rendering: pixelated;
 		    image-rendering: optimize-contrast;
 		    -ms-interpolation-mode: nearest-neighbor;
-		    /*transform-origin: left top;*/
+		    transform-origin: left top;
 		}
 	</style>
 </head>
