--- a/index.html
+++ b/index.html
@@ -24,190 +24,12 @@
 	</style>
 </head>
 <body>
-<canvas id="c-dst" width="512" height="512" class="mc"></canvas>
+<canvas id="displayCanvas" width="512" height="512" class="mc"></canvas>
 <div style="position:fixed;top:0px;right:0px;">
-<select id="selectPattern">
-	<option selected value="0">0 1/4</option>
-	<option value="1">RAINBOW</option>
-</select>
-<select id="se">
-	<option selected value="e-linear.png">Basic grad</option>
-	<option value="e-linear-32.png">32 grad</option>
-	<option value="e-c-1.png">Circular 1</option>
-	<option value="e-c-2.png">Circular 2</option>
-	<option value="e-radial.png">Radial</option>
-	<option value="p-0.png">Piece 0</option>
-	<option value="p-1.png">Piece 1</option>
-	<option value="p-2.png">Piece 2</option>
-	<option value="p-3.png">Piece 3</option>
-	<option value="p-3-1.png">Piece 3-1</option>
-	<option value="e1.png">Depth grad</option>
-	<option value="e2.png">Rings</option>
-	<option value="e3.png">Leafs</option>
-	<option value="e4.png">Grid</option>
-	<option value="e5.png">House</option>
-	<option value="e6.png">Liquid</option>
-	<option value="e7.png">Vortex</option>
-	<option value="e8.png">Smudge</option>
-</select>
+<select id="selectColorPattern"></select>
+<select id="selectPattern"></select>
 </div>
-<script type="text/javascript">
-	var cSrc = document.createElement('canvas');
-	cSrc.width = 512;
-	cSrc.height = 512;
-	var ccSrc = cSrc.getContext("2d");
-	var cBuf = document.createElement('canvas');
-	cBuf.width = 512;
-	cBuf.height = 512;
-	var ccBuf = cBuf.getContext("2d");
-	var cDst = document.getElementById("c-dst");
-	var ccDst = cDst.getContext("2d");
-	var id_src = null;
-	var id_buf = ccDst.createImageData(512,512);
-
-	function s( a ) { return Math.sin(a) }
-
-	function a( a ) { return Math.abs(a) }
-
-	function ns( a ) { return (Math.sin(a)+1)/2 }
-
-	function c(a,l,h) { return Math.max( Math.min( a, h ), l ) }
-
-	function put (id, x, y, r, g, b, a) {
-	  let offset = (id.width * y  + x) * 4;
-	  id.data[offset] = r*255;
-	  id.data[offset+1] = g*255;
-	  id.data[offset+2] = b*255;
-	  id.data[offset+3] = a*255;
-	}
-
-	function at (id, x, y) {
-	  let offset = (id.width * y  + x) * 4;
-	  return [
-	  id.data[offset],
-	  id.data[offset+1],
-	  id.data[offset+2],
-	  id.data[offset+3],
-	  ];
-	}
-
-	function c2i (c) {
-		return ~~ (((c[0]+c[1]+c[2])/768)*cmapsize);
-	}
-
-	function v2i (v) {
-		return (v*cmapsize)|0;
-	}
-
-	function back (x,y,n) {
-		r = ns(x/10-y/10);
-		g = ns(x/10+y/10);
-		b = (r+g)|0;
-		r = b;
-		g = b;
-		// g = ns((x+n)/10 + (y+n)/10);
-		// b = ns(((y-200)/133)+n);
-		// a = ns(n) * (r+g+b)/3;
-		return [r/4,g/4,b/4,1];
-	}
-
-	var cmapsize = 1;
-
-	var cmap = [
-		[0,0,0,0],
-	];
-
-	var maps = [
-		{
-			map: [
-				[0,0,0,0],
-				[0,0,0,1],
-				[0,0,0,0],
-				[0,0,0,0],
-				[0,0,0,0],
-				[0,0,0,1],
-				[0,0,0,0],
-				[0,0,0,0],
-			]
-		},
-		{
-			map: [
-				[1,0,0,1],
-				[1,.5,0,1],
-				[1,1,0,1],
-				[.5,1,0,1],
-				[0,1,0,1],
-				[0,1,.5,1],
-				[0,1,1,1],
-				[0,.5,1,1],
-				[0,0,1,1],
-				[.5,0,1,1],
-				[1,0,1,1],
-				[1,0,.5,1],
-			]
-		},
-	];
-
-	function setMap () {
-		;
-	}
-
-	function cat (i) {
-		return cmap[i];
-	}
-
-	function shit(now) {
-	  if (id_src) {
-	  var n = now / 256;
-	  var l = (n % 20)/20;
-	  for (let x = 0; x < 512; x++) {
-	    for (let y = 0; y < 512; y++) {
-	      var t = at(id_src,x,y);
-	      tv = (t[0]+t[1]+t[2])/768;
-	      // tv = (t[0]+t[1]+t[2]+t[3])/1024;
-	      var v = (tv+l)%1;
-	      var c = cat(v2i(v));
-	      if (typeof c === "function") {
-	      	c = c(x,y,n);
-	      }
-	      put(id_buf,x,y, c[0], c[1], c[2], c[3]);
-	      // put(id_buf,x,y,r,g,b,1);
-	    }
-	  }
-	  // ccBuf.putImageData(id_buf, 0, 0);
-	  // ccDst.drawImage(cBuf,0,0);
-	  ccDst.putImageData(id_buf, 0, 0);
-	  }
-	  requestAnimationFrame(shit);
-	}
-
-	var sc = document.getElementById("se");
-	sc.onchange = function() {
-		reloadImage();
-	}
-
-	var selectPattern = document.getElementById("selectPattern");
-	selectPattern.onchange = function() {
-		reloadPattern();
-	}
-
-	function reloadPattern () {
-		let index = selectPattern.value;
-		cmap = maps[index].map;
-		cmapsize = cmap.length;
-	}
-	reloadPattern();
-
-	function reloadImage () {
-		var img_1 = new Image();
-		img_1.onload = function () {
-			ccSrc.drawImage(img_1,0,0);
-			id_src = ccSrc.getImageData(0,0,512,512);
-		}
-		img_1.src = sc.value;
-	}
-	reloadImage();
-	requestAnimationFrame(shit);
-</script>
+<script type="text/javascript" src="lib.js"></script>
+<script type="text/javascript" src="index.js"></script>
 </body>
 </html>
