--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
 <body>
 <canvas id="displayCanvas" width="512" height="512" class="mc"></canvas>
 <div style="position:fixed;top:0px;right:0px;">
-<select id="selectColorPattern"></select>
-<select id="selectPattern"></select>
+	<select id="selectColorPattern"></select>
+	<br>
+	<select id="selectPattern"></select>
+	<br>
+	<select id="selectLevelFunction"></select>
 </div>
 <script type="text/javascript" src="lib.js"></script>
 <script type="text/javascript" src="index.js"></script>
