--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			padding: 0;
 			border: none;
 		}
-		.mc {
+		.mainCanvas {
 		    transform: scale(2);
 		    image-rendering: optimizeSpeed;
 		    image-rendering: -moz-crisp-edges;
@@ -21,11 +21,18 @@
 		    -ms-interpolation-mode: nearest-neighbor;
 		    transform-origin: left top;
 		}
+		.menu {
+			position:fixed;top:0;right:0;
+		}
+		.menu select {
+			float: right;
+			width: 10em;
+		}
 	</style>
 </head>
 <body>
-<canvas id="displayCanvas" width="512" height="512" class="mc"></canvas>
-<div style="position:fixed;top:0px;right:0px;">
+<canvas id="displayCanvas" width="512" height="512" class="mainCanvas"></canvas>
+<div class="menu" style="position:fixed;top:0;right:0;">
 	<select id="selectColorPattern"></select>
 	<br>
 	<select id="selectPattern"></select>
