--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 	<select id="selectPattern"></select>
 	<br>
 	<select id="selectLevelFunction"></select>
+	<br>
+	<input type="range" id="speedSlider" min="-5" max="5" value="1" step="0.1">
 </div>
 <script type="text/javascript" src="lib.js"></script>
 <script type="text/javascript" src="index.js"></script>
