Bundled three.js; Added a pattern;

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 			width: 10em;
 		}
 	</style>
+	<script type="text/javascript" src="three.min.js"></script>
 </head>
 <body>
 <canvas id="displayCanvas" width="512" height="512" class="mainCanvas"></canvas>
